# personal_health_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pha_backend_skeleton.md  pha_db_schema.sql  pha_vision_upload_flow.md  pyproject.toml  repair_medical_rows.py  requirements.txt
docker/: entrypoint.sh
docs/: GITHUB_PUBLISH.md  INSTALL.md  attach-in-15-minutes.md  audit-implementation-plan-2026-07.md  doc-roadmap-v2.3.md  en-stress-50x-full-report-2026-07-11.md  github-issue-call-for-builders.md  github-issue-phase-a-closeout-comment.md  harness-build-report-schema.md  harness-builder-overview.md  harness-catalog-v2.2.7.md  harness-change-log.md  harness-consensus-opus48-2026-06-08.md  harness-core-evolution-blueprint.md  harness-core-protocol-v0.md  harness-dch-p1.6.md  harness-eval-set-v1.md  harness-evidence-matrix.md  harness-loop-reflection-architecture.en.md  harness-loop-reflection-architecture.md  harness-loop-reflection-architecture.zh.md  harness-numerics-manifest-v2.2.6.2-min.md  harness-subagent-protocol-v1.md  harness-tier0-fuse-v2.2.6.1.md  harness-wearable-p1.5.md  incident-analysis-chat-hero-2026-06-07.md  loop-evolution-human-in-the-loop-sop.en.md  loop-evolution-human-in-the-loop-sop.zh.md  macos-pha-launcher.md  manifest-tier-v1-impl-preview.md  manifest-tier-v1.md  metadata-catalog-v2.3.md  official-loop-suite-alpha-plan.md  p1-2-outreach-prep.md  pha-architecture-evolution-v2.3.md  pha-bilingual-stress-plan.md  pha-pm-constitution.md  rollback-v2.3.29-architecture-diff.md  stability-remediation-plan-2026-06-10.md  (+43 more)
pha/: __init__.py  (+138 more)
(+204 files in other folders)
