[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-health-agent"
version = "0.1.0a1"
description = "Local-first personal health intelligence with evidence-grounded AI chat"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "PHA Contributors" }]
keywords = ["health", "apple-health", "ollama", "fastapi", "wearables"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pydantic>=2.4.0,<3",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pha-doctor = "pha.doctor_cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_ORG/personal-health-agent"
Documentation = "https://github.com/YOUR_ORG/personal-health-agent/blob/main/docs/INSTALL.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pha*"]

[tool.setuptools.package-data]
pha = ["index.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
